<resources>
    <string name="app_name">AndroidGridLayout</string>
    <string name="my_account">My Account</string>
    <string name="live_exam">Live Exam</string>
    <string name="routine">Routine</string>
    <string name="result">Result</string>
    <string name="admission_requirement">Admission Requirement</string>
    <string name="notice">Notice</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
</resources>
